# agent-zero

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitmodules  .prettierrc.js  CONTRIBUTING.md  Dockerfile.agent-zero  Makefile  README.md  agent.py  az_daemon.py  az_queue.py  bot_headless.out  cloudflared.yml  config.py  constraints.txt  cookies.txt  crm_api.out  crm_web.out  daemon.out  daemon_redis.out  debug_state.py  docs  eslint.config.js  gw.out  gw2.out  initialize.py  jsconfig.json  logging_config.py  logs  metrics.py  models.py  multi_tenant.py  nx.json  package-lock.json  package.json  preload.py  prepare.py  pyproject.toml  (+14 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml
apps/agent_zero_core/: __init__.py
apps/agent_zero_core/python/api/: chat_load.py  external_api.py  image_get.py  message.py  poll.py  settings_set.py  upload.py
apps/agent_zero_core/python/tools/: code_execution_tool.py
apps/broadhub/: README.md
apps/crm/: README.md
apps/whatsapp-gateway/: README.md
docker/run/: config.yml  docker-compose.yml  run_tunnel.bat
docs/: MIGRATION.md  MONOREPO_SUMMARY.md
middleware/: log_correlation.py
python/api/: history_get.py  poll.py  settings_get.py
python/helpers/: runtime.py
queue/: redis_queue.py
queues/: redis_queue.py
scripts/: cookies.txt  restart_agent_zero_embedded.sh  restart_crm.sh  restart_full.sh  send_test_event.sh  verify_integration.sh
scripts/logs/: agent.log.1
services/: classifier.py  whatsapp_client.py
storage/: processed_events_store.py
tests/: conftest.py  test_classify.py  test_integration_webhook.py  test_queue_and_worker.py  test_signature.py
tools/scripts/: restart.sh
workers/: message_worker.py
